# drake-teleop-system

./: .gitignore  README.md  package.xml  pyproject.toml  setup_python.sh
oculus_drake/: __init__.py  calib_utils.py  calibrate_main.py  collect_demo_main.py  hardware_drake.py  oculus_drake_lib.py  oculus_reader.py  process_action_main.py  record_calib_joints_main.py  replay_robot_main.py  sim_replay_demo_main.py  teleop_main.py  teleop_utils.py  test_cam_main.py  test_teleop.py
oculus_drake/calib_scripts/: calibrate_main.py  collect_calibrate_main.py  old_calibrate_main.py
oculus_drake/calibration/: calibration_joints.npy  camera_extrinsics.json  camera_extrinsics_kuka.json  camera_intrinsics.json  copy_calib.py  mast3r_camera_extrinsics.json  mast3r_camera_intrinsics.json  mast3r_poses.py  old_extrinsics.json  tmp.py
oculus_drake/calibration_scripts/: aruco_board_main.py  collect_calibrate_main.py  old_calibrate_main.py  record_calib_joints_main.py
oculus_drake/config/: calib_iiwa.yaml  fake_calib_iiwa.yaml  fake_teleop_iiwa.yaml  teleop_iiwa.yaml  teleop_iiwa_no_wsg.yaml
oculus_drake/perception/: perception3d_module.py
oculus_drake/realsense/: cameras.py  multi_realsense.py  single_realsense.py  utils.py
oculus_drake/realsense/shared_memory/: shared_memory_queue.py  shared_memory_ring_buffer.py  shared_memory_util.py  shared_ndarray.py
oculus_drake/replay/: replay_robot_main.py  sim_replay_demo_main.py
oculus_drake/teleop/: dataset.py  oculus_drake_lib.py  teleop_utils.py
oculus_drake/teleop_scripts/: collect_demo_main.py  process_action_main.py  teleop_main.py
oculus_drake/test/: test_cam_main.py  test_fused_pcd.py  test_gripper_main.py  test_perception.py  test_perception_module.py  test_realsense.py  test_save_intrinsics.py
oculus_drake/test_scripts/: test_cam_main.py  test_extrinsics_vis.py  test_fused_pcd.py
